# raylib_code_snippets

./: .gitignore  CLAUDE.md  MOTION_AUTHORING.md  README.md  progress.md  raylib_cheatsheet.md  raymath_cheatsheet.md
projs_cpp/motion_editor/: CMakeLists.txt  PROGRESS.md  README.md
projs_cpp/motion_editor/clips/: sample.clip
projs_cpp/motion_editor/src/: main.cpp
projs_cpp/world_sculptor_hex/: CMakeLists.txt  README.md  raylib_cheatsheet.md  raymath_cheatsheet.md
projs_cpp/world_sculptor_hex/include/mapcore/: features.hpp  hex.hpp  map.hpp  pathfinding.hpp  rivers.hpp  terrain.hpp
projs_cpp/world_sculptor_hex/include/mapcore/generation/: classify.hpp  depressions.hpp  heightmap.hpp  overlay.hpp  pipeline.hpp  postprocess.hpp
projs_cpp/world_sculptor_hex/src/: features.cpp  hex.cpp  map.cpp  pathfinding.cpp  rivers.cpp  terrain.cpp
projs_cpp/world_sculptor_hex/src/generation/: classify.cpp  climate.cpp  depressions.cpp  overlay.cpp  pipeline.cpp  postprocess.cpp
projs_cpp/world_sculptor_hex/tests/: main.cpp
projs_cpp/world_sculptor_hex/viewer/: CMakeLists.txt  editor_state.cpp  editor_state.hpp  hex_layout.cpp  hex_layout.hpp  main.cpp  render.cpp  render.hpp  tools.cpp  tools.hpp
projs_cpp/world_sculptor_square/: CMakeLists.txt
projs_cpp/world_sculptor_square/include/mapcore/: features.hpp  grid.hpp  map.hpp  pathfinding.hpp  rivers.hpp
projs_cpp/world_sculptor_square/include/mapcore/generation/: biome.hpp  climate.hpp  depressions.hpp  pipeline.hpp  postprocess.hpp
projs_cpp/world_sculptor_square/src/: features.cpp  grid.cpp  map.cpp  pathfinding.cpp  rivers.cpp  terrain.cpp
projs_cpp/world_sculptor_square/src/generation/: biome.cpp  classify.cpp  depressions.cpp  heightmap.cpp  pipeline.cpp  postprocess.cpp
projs_cpp/world_sculptor_square/tests/: main.cpp
projs_cpp/world_sculptor_square/viewer/: CMakeLists.txt  editor_state.cpp  editor_state.hpp  grid_layout.cpp  grid_layout.hpp  main.cpp  render.cpp  render.hpp  render3d.cpp  render3d.hpp  sim.cpp  sim.hpp  tools.cpp  tools.hpp
snippets_cpp/: billboard_3d.cpp  imgui_panel.cpp  imgui_panel_3d.cpp  paper_doll.cpp  procedural_anim_2d.cpp  skeleton_2d.cpp  sprite_atlas.cpp  sprite_mask.cpp  tilemap_hex.cpp  tilemap_hex_3d.cpp  tilemap_square.cpp  tilemap_square_3d.cpp  tilemap_texture.cpp
